--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-images",
+  "name": "react-lightbox-with-youtube",
   "version": "0.5.2",
   "description": "A simple, responsive lightbox component for displaying an array of images with React.js",
   "main": "lib/Lightbox.js",
@@ -10,9 +10,9 @@
     "url": "https://github.com/jossmac/react-images.git"
   },
   "dependencies": {
-    "aphrodite": "^0.5.0",
-    "react-addons-css-transition-group": "^15.3.0",
-    "react-scrolllock": "^1.0.5"
+    "aphrodite": "^1.2.5",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-scrolllock": "^1.0.9"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
